--- a/src/styles/top.css
+++ b/src/styles/top.css
@@ -5,6 +5,24 @@
 .HeaderContainer {
     background-color: #0fae1c;
     text-align: left;
+    height: 68px;
+}
+
+.HeaderContainer_LoginButton,
+.HeaderContainer_LogoutButton {
+    position: absolute;
+    height: 68px;
+    line-height: 68px;
+    top: 0;
+    right: 0;
+    color: #fff;
+    padding: 0 12px;
+    cursor: pointer;
+}
+
+.HeaderContainer_LoginButton:hover,
+.HeaderContainer_LogoutButton:hover {
+    background-color: #0d9518;
 }
 
 .ProgramsContainer_List {
@@ -12,10 +30,12 @@
     flex-wrap: wrap;
     padding: 4px;
     margin-left: -4px;
+    color: #666;
 }
 
 .ProgramsContainer_List .Program {
     flex: 1;
+    min-width: 200px;
     margin-left: 4px;
     margin-bottom: 4px;
 }
@@ -25,27 +45,189 @@
 }
 
 .PlayerContainer {
+    padding: 4px;
+}
+
+.PlayerContainer_Main {
     display: flex;
 }
 
-.PlayerContainer .PlayerContainer_Player {
+.PlayerContainer .PlayerContainer_Main_Player {
     width: 480px;
     height: 270px;
 }
 
-.PlayerContainer .PlayerContainer_Player .VideoPlayer {
+.PlayerContainer .PlayerContainer_Main_Player .VideoPlayer {
     width: 100%;
     height: 100%;
     background-color: #000;
 }
 
-.PlayerContainer .PlayerContainer_Player .VideoPlayer .plyr,
-.PlayerContainer .PlayerContainer_Player .VideoPlayer .plyr .plyr__video-wrapper,
-.PlayerContainer .PlayerContainer_Player .VideoPlayer .plyr .plyr__video-wrapper .plyr--setup {
+.PlayerContainer .PlayerContainer_Main_Player .VideoPlayer .plyr,
+.PlayerContainer .PlayerContainer_Main_Player .VideoPlayer .plyr .plyr__video-wrapper,
+.PlayerContainer .PlayerContainer_Main_Player .VideoPlayer .plyr .plyr__video-wrapper .plyr--setup {
     width: 100%;
     height: 100%;
+}
+
+.PlayerContainer_Episodes {
+    width: calc(100% - 480px - 4px);
+    margin-left: 4px;
+    height: 270px;
+    overflow: scroll;
+    border-collapse: collapse;
+    text-align: left;
+    color: #666;
+}
+
+.PlayerContainer_Episode {
+    display: flex;
+    background-color: #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    margin-bottom: 4px;
+    cursor: pointer;
+}
+
+.PlayerContainer_Episode:hover {
+    background-color: #fff;
+}
+
+.PlayerContainer_Episode.is-playing {
+    background-color: #52ae0f;
+    color: #fff;
+}
+
+.PlayerContainer_Episode_Image {
+    width: 80px;
+    height: 60px;
+}
+
+.PlayerContainer_Episode_Image img {
+    width: 100%;
+}
+
+.PlayerContainer_Episode_Information {
+    flex: 1;
+    position: relative;
+}
+
+.PlayerContainer_Episode_InformationHead {
+    padding: 4px;
+}
+
+.PlayerContainer_Episode_Title {
+    font-size: 17px;
+}
+
+.PlayerContainer_Episode_Update {
+    font-size: 12px;
+    position: absolute;
+    right: 4px;
+}
+
+.PlayerContainer_Episode_Labels {
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+    padding: 0 4px 4px;
+    font-size: 13px;
+}
+
+.PlayerContainer_Episode_Labels > span {
+    margin-left: 4px;
+}
+
+.PlayerContainer_Episode_NewLabel {
+    display: inline-block;
+    width: 35px;
+    background-color: #f55;
+    padding: 2px 0;
+    border-radius: 4px;
+    color: #fff;
+    text-align: center;
+}
+
+.PlayerContainer_Episode_PremiumLabel {
+    display: inline-block;
+    width: 65px;
+    background-color: #c5b358;
+    padding: 2px 0;
+    border-radius: 4px;
+    color: #fff;
+    text-align: center;
+}
+
+
+
+.PlayerContainer_Information {
+    overflow: hidden;
+    text-align: left;
+    padding: 4px 8px;
+    color: #666;
+    margin-top: 8px;
+}
+
+.PlayerContainer_Information_Title {
+    font-size: 22px;
+}
+
+.PlayerContainer_Information_Performers {
+    font-size: 14px;
+    margin-top: 8px;
+    padding: 0 4px;
+}
+.PlayerContainer_Information_Performers .PlayerContainer_Information_Performers_PerformerName:not(:last-child):after {
+    content: '/';
+    margin: 0 2px;
+}
+
+.PlayerContainer_Information_Description {
+    font-size: 16px;
+    margin-top: 12px;
+    padding: 0 4px;
+    line-height: 1.7;
+}
+
+.ProgramsContainer_Filter {
+    display: flex;
+    background-color: #fde;
+    padding: 4px 16px;
+}
+
+.ProgramsContainer_Filter_Item {
+    padding: 4px 12px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.ProgramsContainer_Filter_Item:not(:first-child) {
+    margin-left: 4px;
+}
+
+.ProgramsContainer_Filter_Item:hover {
+    background-color: #ddd;
+}
+
+.ProgramsContainer_Filter_Item.is-selected {
+    background-color: #fab;
+    color: #fff;
 }
 
 @import "./components/Program.css";
 
 @import "plyr/dist/plyr.css";
+
+.plyr--audio .plyr__controls button.tab-focus:focus,
+.plyr--audio .plyr__controls button:hover,
+.plyr__play-large,
+input.plyr__progress--seek[type="range"]:active::-webkit-slider-thumb,
+input.plyr__volume--input[type="range"]:active::-webkit-slider-thumb,
+.plyr--video .plyr__controls button:hover {
+    background-color: #0fae1c;
+}
+
+.plyr__progress--played,
+.plyr__volume--display {
+    color: #0fae1c;
+}
